# El-Agente-Math

./: .env.example  .gitignore  LICENSE  README.md  main.py  project.md  pyproject.toml
dataset/bao/2410.10253/: 2410.10253_consolidated.tex  2410.10253_consolidated_formulas.json  2410.10253_consolidated_labeled.tex  2410.10253_error_log.json  2410.10253_explained.json  2410.10253_formulas_with_errors.json
dataset/bao/2410.14055/: 2410.14055_consolidated.tex  2410.14055_consolidated_formulas.json  2410.14055_consolidated_labeled.tex  2410.14055_error_log.json  2410.14055_explained.json  2410.14055_formulas_with_errors.json
dataset/bao/2411.00161/: 2411.00161_consolidated.tex  2411.00161_consolidated_formulas.json  2411.00161_consolidated_labeled.tex  2411.00161_error_log.json  2411.00161_explained.json  2411.00161_formulas_with_errors.json
dataset/bao/2411.12537/: 2411.12537_consolidated.tex  2411.12537_consolidated_formulas.json  2411.12537_consolidated_labeled.tex  2411.12537_error_log.json  2411.12537_explained.json  2411.12537_formulas_with_errors.json
dataset/bao/2502.02013/: 2502.02013_consolidated.tex  2502.02013_consolidated_formulas.json  2502.02013_consolidated_labeled.tex  2502.02013_error_log.json  (+2 more)
src/: __init__.py  arxiv_downloader.py  benchmarker.py  check_equation.py  error_injector.py  formula_explainer.py  formula_extractor.py  llm_client.py  main.py  tex_consolidator.py
src/benchmark_providers/: README.md  __init__.py  base.py  benchmark_cli.py  deepseek.py  openai_provider.py  openrouter_provider.py  prover_benchmark.py
(+202 files in other folders)
