[project]
name = "el-agente-math"
version = "0.1.0"
description = "Extract and analyze mathematical formulas from arXiv papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "pylatexenc",
    "sympy>=1.14.0",
    "typer>=0.20.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "pydantic-ai>=1.12.0",
    "kimina-client>=0.2.1",
]

[tool.uv.sources]
pylatexenc = { git = "https://github.com/phfaist/pylatexenc.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mai = "src.main:main"
